Added delete project, get task/tasks apis
