# dist/swagger.yaml
@@ -77,7 +77,14 @@ host: "quire.io"
 basePath: "/api"
 tags:
 - name: "projects"
-  description: "Operations about projects"
+  description: "A project represents a prioritized list of tasks in Quire. It exists\
+    \ in a single organization and is accessible to a subset of users in that organization,\
+    \ depending on its permissions."
+- name: "tasks"
+  description: "The task is the basic object around which many operations in Quire\
+    \ are centered. In the Quire application, multiple tasks populate the middle pane\
+    \ according to some view parameters, and the set of selected tasks determines\
+    \ the more detailed information presented in the details pane."
 schemes:
 - "https"
 paths:
@@ -85,7 +92,7 @@ paths:
     post:
       tags:
       - "projects"
-      summary: "Create a new project."
+      summary: "Create a project."
       description: "Creates a new project in an organization."
       operationId: "create"
       produces:
@@ -106,15 +113,11 @@ paths:
           description: "Invalid ID supplied"
         403:
           description: "Not allow"
-      security:
-      - quire_auth:
-        - "write:projects"
-        - "read:projects"
   /projects/{id}:
     get:
       tags:
       - "projects"
-      summary: "Get a specific project"
+      summary: "Get a project"
       description: "returns the complete project record for a single project."
       operationId: "getProject"
       produces:
@@ -134,14 +137,10 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Project not found"
-      security:
-      - quire_auth:
-        - "write:projects"
-        - "read:projects"
     put:
       tags:
       - "projects"
-      summary: "Update a specific project"
+      summary: "Update a project"
       description: "A specific, existing project can be updated by making a PUT request\
         \ on the URL for that project.\nReturns the complete updated project record."
       operationId: "update"
@@ -170,10 +169,81 @@ paths:
           description: "Not allow"
         404:
           description: "Project not found"
-      security:
-      - quire_auth:
-        - "write:projects"
-        - "read:projects"
+    delete:
+      tags:
+      - "projects"
+      summary: "Delete a project"
+      description: "A specific, existing project can be deleted by making a DELETE\
+        \ request on the URL for that project."
+      operationId: "delete"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of project that needs to be deleted"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "ok"
+        400:
+          description: "Invalid ID supplied"
+        403:
+          description: "Not allow"
+        404:
+          description: "Project not found"
+  /projects/{id}/tasks:
+    get:
+      tags:
+      - "projects"
+      summary: "Get project tasks"
+      description: "Returns the compact task records for all tasks within the given\
+        \ project"
+      operationId: "getTasks"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of the project in which to search for tasks"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Task"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Project not found"
+  /tasks/{id}:
+    get:
+      tags:
+      - "tasks"
+      summary: "Show a task."
+      description: "Returns the complete task record for a single task."
+      operationId: "getTask"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of task that needs to be fetched"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Task"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Task not found"
 securityDefinitions:
   api_key:
     type: "apiKey"
@@ -207,6 +277,15 @@ definitions:
       id:
         type: "string"
         example: "Marketing_Project"
+  Task:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+        example: "Design new logo"
+      id:
+        type: "string"
+        example: "12"
   UpdateProjectBody:
     type: "object"
     properties:
